Fix horizontal scroll uglyness

--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,9 @@ html, body {
   font-size: 16px;
   line-height: 1.5;
   color: #333;
-  background: #F6F6F6
+  background: #F6F6F6;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .contact-lint {
